--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Contact-Raiyan Noory Rady</title>
 
 	<script src="https://kit.fontawesome.com/2ee2f3f3ed.js" crossorigin="anonymous"></script>
